Fix scrollbar height.

--- a/docs-src/src/layouts/index.css
+++ b/docs-src/src/layouts/index.css
@@ -5,6 +5,7 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  overflow: hidden;
 }
 body {
   margin: 0;
@@ -19,12 +20,12 @@ body {
   font-kerning: normal;
   font-feature-settings: "kern", "liga", "clig", "calt";
 }
-body::-webkit-scrollbar {
+body::-webkit-scrollbar,
+body::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-track {
   display: none;
 }
-body::-webkit-scrollbar-thumb {
-  display: none;
-}
+
 article,
 aside,
 details,
@@ -636,6 +637,8 @@ header.navigation {
   height: 50px;
   max-height: 50px;
   width: 100%;
+  position: fixed;
+  top: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -670,14 +673,13 @@ header.navigation .links span a {
 
 main {
   display: flex;
+  margin-top: 50px;
+  height: calc(100vh - 50px);
+  max-height: calc(100vh - 50px);
 }
 
 main aside, main .content {
-  height: calc(100vh - 35px);
-  max-height: calc(100vh - 35px);
-  /*height: 100vh;
-  max-height: 100vh;*/
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 main aside::-webkit-scrollbar,
@@ -685,6 +687,10 @@ main .content::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 5px;
 }
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
 
 main .content::-webkit-scrollbar {
   background: white;
